[package]
name = "mdbook-wikilink"
description = "Support for wikilinks on mdBook."
homepage = "https://github.com/mdzk-rs/mdbook-wikilink"
repository = "https://github.com/mdzk-rs/mdbook-wikilink"
version = "0.3.0"
authors = ["Victor Freire <victor@freire.dev.br>", "Leo Silva Souza <leovano@protonmail.com>", "Knut Magnus Aasrud <km@aasrud.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
clap = "2.33.3"
mdbook = "0.4.10"
regex = "1.4.3"
serde = "1.0.123"
serde_json = "1.0.61"
urlencoding = "2.0.0"
