[package]
name = "mdbook-wikilink"
description = "Support for wikilinks on mdBook."
homepage = "https://github.com/mdzk-rs/mdbook-wikilink"
repository = "https://github.com/mdzk-rs/mdbook-wikilink"
version = "0.3.0"
authors = ["Victor Freire <victor@freire.dev.br>", "Leo Silva Souza <leovano@protonmail.com>", "Knut Magnus Aasrud <km@aasrud.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
mdbook = "0.4.12"
clap = "2.33.3"
lazy-regex = "2.2.1"
regex = "1.5.4"
serde = "1.0.123"
serde_json = "1.0.64"
urlencoding = "2.0.0"
